# anki_creator

./: Makefile  README.md  pyproject.toml
input/: deep_learning.txt  test.txt
output/: deep_learning.apkg  my_test_deck.apkg  test.apkg
src/: main.py
