[tool.poetry]
name = "anki-creator"
version = "0.1.0"
description = ""
authors = ["Moustafa <mosafehashf@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
genanki = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
